istio/local/jaeger.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jaeger
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jaeger.local"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: jaeger
spec:
  gateways:
  - jaeger
  hosts: [ "jaeger.local" ]
  http:
  - route:
    - destination:
        host: "jaeger-query.jaeger.svc.cluster.local"
        port:
          number: 80
      weight: 100

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jaeger
  namespace: jaeger
spec:
  host: jaeger
  trafficPolicy:
    tls:
      mode: DISABLE
